Fixi word wrapping for main page titles
Now that we have longer titles I need to be able to wrap the words.

--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -308,12 +308,11 @@ h1, h2, h3 {
   bottom: 16px;
   color: white;
   padding: 20px 20px 0 0;
+  width: 550px;
 }
 
 .welcome-title .eng {
   font-size: 2.9em;
-  margin-left: 1em;
-  text-indent: -1em 
 }
 
 .welcome-title .esp {
